<resources>
    <string name="app_name">StarWars</string>
    <string name="fragment_details_name">Name</string>
    <string name="fragment_details_image">Image</string>
    <string name="fragment_details_died_location">Died Location</string>
    <string name="fragment_details_skin_color">Skin Color</string>
    <string name="fragment_details_died_year">Died Years</string>
    <string name="fragment_details_species">Species</string>
    <string name="fragment_details_height">Height</string>


    <string name="fragment_details_status">Status</string>
    <string name="fragment_details_type">Type</string>
    <string name="fragment_details_gender">Gender</string>
</resources>