<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="starPeople"
            type="com.technical.starwars.data.entity.starwars.StarwarsPeople" />
    </data>

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.detailsfragmentstar.DetailsStarFragment">
        <TableRow>
            <Toolbar android:id="@+id/tb_details_star" android:layout_weight="1"/>
        </TableRow>
        <TableRow android:layout_margin="@dimen/item_character_image_margin_all_direction">

            <TextView
                android:layout_weight="1"
                android:text="@string/fragment_details_name" />

            <TextView
                android:layout_weight="1"
                tools:text = "Hola"
                android:text="@{starPeople.name}" />
        </TableRow>

        <TableRow android:layout_margin="@dimen/item_character_image_margin_all_direction">

            <TextView
                android:layout_weight="1"
                android:text="@string/fragment_details_died_location" />

            <TextView
                android:layout_weight="1"
                android:text="@{starPeople.diedLocation}" />
        </TableRow>

        <TableRow android:layout_margin="@dimen/item_character_image_margin_all_direction">

            <TextView
                android:layout_weight="1"
                android:text="@string/fragment_details_died_year" />

            <TextView
                android:layout_weight="1"
                android:text="@{starPeople.died}" />
        </TableRow>

        <TableRow android:layout_margin="@dimen/item_character_image_margin_all_direction">

            <TextView
                android:layout_weight="1"
                android:text="@string/fragment_details_species" />

            <TextView
                android:layout_weight="1"
                android:text="@{starPeople.species}" />
        </TableRow>

        <TableRow android:layout_margin="@dimen/item_character_image_margin_all_direction">

            <TextView
                android:layout_weight="1"
                android:text="@string/fragment_details_height" />

            <TextView
                android:layout_weight="1"
                android:text="@{starPeople.height}" />
        </TableRow>

        <TableRow android:layout_margin="@dimen/item_character_image_margin_all_direction">

            <ImageView
                android:layout_height="200dp"
                android:layout_width="200dp"
                imageUrl="@{starPeople.image}"
                android:layout_weight="1" />
        </TableRow>
    </TableLayout>
</layout>
